==> drugo72/hidradio/Atmel/USBKEY_STK525-series6-hidio-2_0_2-doc/MAC_v_2_6_1/PAL/AVR32/AT32UC3L064/Boards/RZ600_230_UC3LEK/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal.h"
#include "pal_internal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"
#include "pal_timer.h"
#include "touch_api_at32uc3l.h"

void pal_led_init(void)
{
    /* To enable all the leds*/
    gpio_enable_output(LED0_PIN);
    gpio_enable_output(LED1_PIN);
    gpio_enable_output(LED2_PIN);
    gpio_enable_output(LED3_PIN);
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    uint8_t pin;

    switch (led_no)
    {
        case LED_0: pin = LED0_PIN; break;
        case LED_1: pin = LED1_PIN; break;
        case LED_2: pin = LED2_PIN; break;
        case LED_3: pin = LED3_PIN; break;
        default: pin = LED2_PIN; break;
    }

    switch (led_setting)
    {
        case LED_ON: gpio_clr_gpio_pin(pin); break;
        case LED_OFF: gpio_set_gpio_pin(pin); break;
        case LED_TOGGLE: gpio_tgl_gpio_pin(pin); break;
        default: /* do nothing */ break;
    }
}
